# bot_tg

./: Cargo.toml  README.md  output.txt
src/: main.rs
