[package]
name = "bot_tg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.145", features = ["derive"] }
tokio = { version = "1.21.2", features = ["full"] }
reqwest = { version = "0.11.12", features = ["json"] }
log = "0.4"
pretty_env_logger = "0.4.0"
teloxide = { version = "0.11.2", features = ["macros"] }